Fix documentation for Array#pack m directive count specifier [ci skip]

Fixes [Bug #10025]